// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator Component Calculator Snapshot renderer 1`] = `
<div
  className="css-1esthja"
>
  <div
    className="css-1esthja"
  >
    0
  </div>
  <div
    className="css-1esthja"
  >
    <div
      className="css-1esthja"
    />
    <div
      className="css-1esthja"
    />
  </div>
</div>
`;

exports[`Calculator Component CalculatorDiv Snapshot renderer 1`] = `
<div
  className="css-1esthja"
/>
`;
